samples/_failures_safe/1761316847_8e62c3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0f75391.c: In function ‘print_state_info’:
./samples/SAFE/__tmp_d0f75391.c:170:25: error: missing terminating " character
  170 |         default: printf("UNKNOWN
      |                         ^~~~~~~~
./samples/SAFE/__tmp_d0f75391.c:170:9: error: expected expression at end of input
  170 |         default: printf("UNKNOWN
      |         ^~~~~~~
./samples/SAFE/__tmp_d0f75391.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d0f75391.c:170:9: error: expected declaration or statement at end of input
